WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
53053
Empty URLs are never display isolated
https://bugs.webkit.org/show_bug.cgi?id=53053
Summary
Empty URLs are never display isolated
Adam Barth
Reported
2011-01-24 17:46:14 PST
Empty URLs are never display isolated
Attachments
Patch
(1.27 KB, patch)
2011-01-24 17:47 PST
,
Adam Barth
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2011-01-24 17:47:35 PST
Created
attachment 79999
[details]
Patch
Eric Seidel (no email)
Comment 2
2011-01-25 12:26:34 PST
Comment on
attachment 79999
[details]
Patch OK. This registry isn't used by other platforms, only chromium? I guess and empty iframe wouldnt' hit this?
Eric Seidel (no email)
Comment 3
2011-01-25 12:26:57 PST
Do empty urls not get redirected to about:blank?
Adam Barth
Comment 4
2011-01-25 12:58:44 PST
> OK. This registry isn't used by other platforms, only chromium?
That's correct.
> I guess and empty iframe wouldnt' hit this?
In either case, any empty iframe is fine to display.
> Do empty urls not get redirected to about:blank?
Empty URLs get translated to about:blank, but at a relatively high level of the machinery. It's reasonably for folks to ask about empty schemes at a low level.
WebKit Commit Bot
Comment 5
2011-01-25 13:29:22 PST
Comment on
attachment 79999
[details]
Patch Clearing flags on attachment: 79999 Committed
r76637
: <
http://trac.webkit.org/changeset/76637
>
WebKit Commit Bot
Comment 6
2011-01-25 13:29:28 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug